syntax = "proto3";

package user;

option go_package="proto;userpb";

message UserBrief {
    string id = 1;
    string name = 2;
}

message GetUserBriefByIDRequest {
    string id = 1 ;
}

message GetUserBriefByIDResponse {
    UserBrief userBrief = 1;
}

service UserService {
    rpc GetUserBriefByID(GetUserBriefByIDRequest) returns (GetUserBriefByIDResponse){};
}